--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <iframe src="README.md" width="100%" height="500px"></iframe>
     </div>
 
-    <!-- Display external link -->
+    <!-- Display embedded dashboard -->
     <div>
-        <h2>External Link</h2>
-        <p><a href="http://localhost:3000/public-dashboards/3e2ceba4f37c4291ab2bc89139b8d468" target="_blank">Link to Dashboard</a></p>
+        <h2>Embedded Dashboard</h2>
+        <iframe src="http://localhost:3000/public-dashboards/3e2ceba4f37c4291ab2bc89139b8d468" width="100%" height="800px"></iframe>
     </div>
 </body>
 </html>
