--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Display embedded dashboard -->
     <div>
         <h2>Embedded Dashboard</h2>
-        <iframe src="http://localhost:3000/public-dashboards/3e2ceba4f37c4291ab2bc89139b8d468" width="100%" height="800px"></iframe>
+        <iframe src="https://snapshots.raintank.io/dashboard/snapshot/8fnMLtuB2Ijy7xeMCemTRaT83g67RSdB" width="100%" height="800px"></iframe>
     </div>
 </body>
 </html>
