--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Pivotal Analytics Dashboard</title>
 </head>
 <body>
-    <h1>Dashboard</h1>
+    <h1>Pivotal Analytics Dashboard</h1>
     
-    <!-- Display README content -->
     <div>
-        <h2>README</h2>
-        <iframe src="README.md" width="100%" height="500px"></iframe>
+        <h2>Welcome to the Pivotal Analytics Dashboard project!</h2>
+        <p>This project aims to provide insightful analytics and visualizations for Pivotal data through a customizable dashboard. It leverages Python scripts to interact with the Pivotal APIs, SQLite for data storage and manipulation, and Grafana for visualization and dashboard creation.</p>
     </div>
 
     <!-- Display embedded dashboard -->
