--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 
     <!-- Display embedded dashboard -->
     <div>
-        <h2>Embedded Dashboard</h2>
+        <h2>Key Metrics</h2>
         <iframe src="https://snapshots.raintank.io/dashboard/snapshot/3XcZlazujpmEeMISAxe5scSPF6p5wnRB" width="100%" height="800px"></iframe>
+        <h2>Table Chart</h2>
+        <iframe src="https://snapshots.raintank.io/dashboard/snapshot/uIQh9ikzcdJeJixHw7XjBjJoVr6ypyFC" width="100%" height="800px"></iframe>
+
     </div>
 </body>
 </html>
