--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <iframe src="https://snapshots.raintank.io/dashboard/snapshot/LCMQOt7rrdYFcuSuSu1rcTtJzB1d4TiW" width="100%" height="800px"></iframe>
         <h2>Table Chart</h2>
         <iframe src="https://snapshots.raintank.io/dashboard/snapshot/uIQh9ikzcdJeJixHw7XjBjJoVr6ypyFC" width="100%" height="800px"></iframe>
-
+         <h2>Line Charts</h2>
+        <iframe src="https://snapshots.raintank.io/dashboard/snapshot/fI8eq4nSGVoIBZZwcLpu8LI2U3azPfom" width="100%" height="800px"></iframe>
     </div>
 </body>
 </html>
