--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pivotal Analytics Dashboard</title>
 </head>
 <body>
-    <h1>Pivotal Analytics Dashboard</h1>
+    <h1>Pivotal Analytics Dashboard for Ms Clavijo</h1>
     
     <div>
         <h2>Welcome to the Pivotal Analytics Dashboard project!</h2>
