try embedding superset

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <h2>Table Chart</h2>
         <iframe src="https://snapshots.raintank.io/dashboard/snapshot/uIQh9ikzcdJeJixHw7XjBjJoVr6ypyFC" width="100%" height="800px"></iframe>
          <h2>Line Charts</h2>
-        <iframe src="https://snapshots.raintank.io/dashboard/snapshot/fI8eq4nSGVoIBZZwcLpu8LI2U3azPfom" width="100%" height="800px"></iframe>
+        <!-- Replace this iframe with the embedded chart -->
+        <iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="https://data-alpha.trusolutions.com/superset/explore/p/QkBOMRjo9p6/?standalone=1&height=400"></iframe>
     </div>
 </body>
 </html>
