--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <iframe src="https://snapshots.raintank.io/dashboard/snapshot/uIQh9ikzcdJeJixHw7XjBjJoVr6ypyFC" width="100%" height="800px"></iframe>
          <h2>Line Charts</h2>
         <!-- Replace this iframe with the embedded chart -->
-        <iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="https://data-alpha.trusolutions.com/superset/explore/p/QkBOMRjo9p6/?standalone=1&height=400"></iframe>
+        <iframe width="600" height="400" seamless frameborder="0" scrolling="no" src="http://localhost:8088/superset/explore/p/Rr3gEJPA62k/?standalone=1&height=400"></iframe>
     </div>
 </body>
 </html>
